[gd_scene load_steps=10 format=3 uid="uid://dug1pnwtgu0v7"]

[ext_resource type="Script" path="res://scenes/world_objects/shock_bomb.gd" id="1_e8kse"]
[ext_resource type="Texture2D" uid="uid://bc1l85vjbt1w" path="res://resources/art/shock_bomb.png" id="1_ng1bi"]
[ext_resource type="Texture2D" uid="uid://1b717sgpgyvw" path="res://resources/art/shock_bomb_lightning_sheet.png" id="2_1wvn0"]
[ext_resource type="AudioStream" uid="uid://b4xf7pum54br0" path="res://resources/shock_go.ogg" id="4_yyc21"]

[sub_resource type="CircleShape2D" id="CircleShape2D_4xa1d"]
radius = 6.0

[sub_resource type="CircleShape2D" id="CircleShape2D_1683u"]
radius = 27.0

[sub_resource type="Animation" id="Animation_so0u2"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Lightning:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Lightning:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = false
tracks/2/path = NodePath("LightningSfx2D:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_emfrm"]
resource_name = "shock_bomb_detonate"
length = 0.5
loop_mode = 1
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Lightning:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Lightning:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("LightningSfx2D:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_l141u"]
_data = {
"RESET": SubResource("Animation_so0u2"),
"shock_bomb_detonate": SubResource("Animation_emfrm")
}

[node name="ShockBomb" type="RigidBody2D"]
y_sort_enabled = true
collision_layer = 15
gravity_scale = 0.0
lock_rotation = true
freeze = true
script = ExtResource("1_e8kse")
_object_name = "Shock Bomb"

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_ng1bi")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("CircleShape2D_4xa1d")

[node name="ShockRange" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="ShockRange"]
shape = SubResource("CircleShape2D_1683u")

[node name="Lightning" type="Sprite2D" parent="."]
visible = false
modulate = Color(1.5, 1.5, 1.5, 1)
texture = ExtResource("2_1wvn0")
hframes = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_l141u")
}

[node name="AliveTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="LightningSfx2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_yyc21")

[connection signal="body_entered" from="ShockRange" to="." method="_on_shock_range_body_entered"]
[connection signal="body_exited" from="ShockRange" to="." method="_on_shock_range_body_exited"]
[connection signal="timeout" from="AliveTimer" to="." method="_on_alive_timer_timeout"]
